@@ -1,4 +1,4 @@
 module Cocard
   VERSION     = '0.7.6-dev'.freeze
-  RELEASEDATE = '2025-04-05'.freeze
+  RELEASEDATE = '2025-04-11'.freeze
 end
