@@ -210,7 +210,25 @@
 <article class="doc">
 <h1 class="page">Changelog</h1>
 <div class="sect1">
-<h2 id="_0_7_5_2025_04_05"><a class="anchor" href="#_0_7_5_2025_04_05"></a>0.7.5 2025-04-05</h2>
+<h2 id="_0_7_6_dev_unreleased"><a class="anchor" href="#_0_7_6_dev_unreleased"></a>0.7.6-dev - unreleased</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Ruhebildschirm setzen: Feedback bei Fehlern verbessert</p>
+</li>
+<li>
+<p>Reboot KoCoBox: Feedback bei SSL-Fehlern, die einen Remote-Reboot verhindern</p>
+</li>
+<li>
+<p>Prüfung Kartenterminal, ob Remote-Management-Port für RMI verfügbar ist.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_0_7_5_2025_04_05"><a class="anchor" href="#_0_7_5_2025_04_05"></a>0.7.5 - 2025-04-05</h2>
 <div class="sectionbody">
 <div class="ulist">
 <ul>
